--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include README.md
 include txtools/lang/*.tx
 recursive-include txtools/templates *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
