--- a/txtools/templates/gen/jinja/MANIFEST.in
+++ b/txtools/templates/gen/jinja/MANIFEST.in
@@ -2,4 +2,5 @@ include README.md
 include LICENSE
 include {{package_name}}/{{package_name}}.genconf
 recursive-include {{package_name}}/templates *
-
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
